--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -3,7 +3,7 @@ name: microvm-kernel
 on: push
 jobs:
   microvm-kernel:
-    runs-on: ubuntu-latest
+    runs-on: actuated
     steps:
       - name: free RAM
         run: free -h
