--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   microvm-kernel:
-    runs-on: ubuntu-latest
+    runs-on: actuated
     steps:
       - name: free RAM
         run: free -h
