--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -31,7 +31,10 @@ jobs:
       - name: make config
         run: |
           cd linux.git 
+          scripts/config --disable SYSTEM_TRUSTED_KEYS
+          scripts/config --disable SYSTEM_REVOCATION_KEYS
           make oldconfig
+
       - name: Make vmlinux
         run: |
           cd linux.git
