--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   microvm-kernel:
-    runs-on: ubuntu-latest
+    runs-on: actuated
     steps:
       - name: free RAM
         run: free -h
@@ -38,6 +38,6 @@ jobs:
       - name: Make vmlinux
         run: |
           cd linux.git
-          time make vmlinux -j$(nproc)
+          time make vmlinux modules -j$(nproc)
           du -h ./vmlinux
 
