--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   microvm-kernel:
-    runs-on: ubuntu-latest
+    runs-on: actuated
     steps:
       - name: free RAM
         run: free -h
