--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   microvm-kernel:
-    runs-on: actuated
+    runs-on: actuated-4cpu-16gb
     steps:
       - name: free RAM
         run: free -h
