--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   microvm-kernel:
-    runs-on: actuated-24cpu-16gb
+    runs-on: ubuntu-latest
     steps:
       - name: free RAM
         run: free -h
