--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -14,6 +14,15 @@ jobs:
   microvm-kernel:
     runs-on: [actuated-arm64-32cpu-64gb]
     steps:
+
+# vmmeter start
+      - uses: alexellis/setup-arkade@master
+      - name: Install vmmeter
+        run: |
+          sudo -E arkade oci install ghcr.io/openfaasltd/vmmeter:latest --path /usr/local/bin/
+      - uses: self-actuated/vmmeter-action@master
+  # vmmeter end
+
       - name: free RAM
         run: free -h
       - name: List CPUs
