--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -13,7 +13,10 @@ on:
 
 jobs:
   microvm-kernel:
-    runs-on: [actuated-4cpu-24gb, n100]
+    runs-on:
+      - [actuated-4cpu-4gb, gce]
+      - [actuated-4cpu-4gb, hetzner]
+      - [actuated-4cpu-4gb, ec2]
     steps:
 
 # vmmeter start
