--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   microvm-kernel:
     runs-on:
-      - [actuated-4cpu-4gb, hetzner]
+      - [actuated-4cpu-4gb, a102]
     steps:
 
 # vmmeter start
