--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: [actuated-4cpu-16gb, "${{ matrix.label }}" ]
     strategy:
       matrix:
-        label: [a102,ec2]
+        label: [a102]
 
     steps:
 # vmmeter start
@@ -49,9 +49,13 @@ jobs:
       - name: make config
         run: |
           cd linux.git 
+          # Generate a minimal empty config
+          make olddefconfig
+          # Turn off a couple of things
           scripts/config --disable SYSTEM_TRUSTED_KEYS
           scripts/config --disable SYSTEM_REVOCATION_KEYS
-          make oldconfig
+
+          make olddefconfig
 
       - name: Make vmlinux
         run: |
