--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -50,12 +50,11 @@ jobs:
         run: |
           cd linux.git 
           # Generate a minimal empty config
-          make olddefconfig
+          make defconfig
+
           # Turn off a couple of things
           scripts/config --disable SYSTEM_TRUSTED_KEYS
           scripts/config --disable SYSTEM_REVOCATION_KEYS
-
-          make olddefconfig
 
       - name: Make vmlinux
         run: |
