--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -55,6 +55,10 @@ jobs:
           # Turn off a couple of things
           scripts/config --disable SYSTEM_TRUSTED_KEYS
           scripts/config --disable SYSTEM_REVOCATION_KEYS
+          scripts/config --disable SYSTEM_TRUSTED_KEYRING 
+
+          # Make the config
+          make LOCALVERSION= olddefconfig
 
       - name: Make vmlinux
         run: |
