--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -14,10 +14,10 @@ on:
 jobs:
   build:
     name: microvm-kernel-${{ matrix.label }}
-    runs-on: [actuated-16cpu-32gb, "${{ matrix.label }}" ]
+    runs-on: [actuated-4cpu-16gb, "${{ matrix.label }}" ]
     strategy:
       matrix:
-        label: [a102]
+        label: [a102, n100]
 
     steps:
 # vmmeter start
