--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: [actuated-32cpu-64gb, "${{ matrix.label }}" ]
     strategy:
       matrix:
-        label: [a102]
+        label: [m1]
 
     steps:
 # vmmeter start
