--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -14,10 +14,10 @@ on:
 jobs:
   build:
     name: microvm-kernel-${{ matrix.label }}
-    runs-on: [actuated-arm64-8cpu-16gb, "${{ matrix.label }}" ]
+    runs-on: [actuated-24cpu-32gb, "${{ matrix.label }}" ]
     strategy:
       matrix:
-        label: [m1]
+        label: [am]
 
     steps:
 # vmmeter start
