Change matrix label from n100 to a102

--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: [actuated-4cpu-32gb, "${{ matrix.label }}" ]
     strategy:
       matrix:
-        label: [n100]
+        label: [a102]
 
     steps:
 # vmmeter start
