Update label for zfs - devmapper comparison

--- a/.github/workflows/microvm-kernel.yml
+++ b/.github/workflows/microvm-kernel.yml
@@ -15,10 +15,10 @@ on:
 jobs:
   build:
     name: microvm-kernel-${{ matrix.label }}
-    runs-on: [actuated-4cpu-32gb, "${{ matrix.label }}" ]
+    runs-on: [actuated-8cpu-32gb, "${{ matrix.label }}" ]
     strategy:
       matrix:
-        label: [a102]
+        label: [zfs, devmapper]
 
     steps:
 # vmmeter start
